[project]
name = "telegramanswer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.0.0",
    "aiohttp>=3.8.0",
    "aiomysql>=0.1.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.12.0",
    "asyncmy>=0.2.10",
    "black>=25.1.0",
    "cryptography>=45.0.2",
    "dotenv>=0.9.9",
    "environs>=9.0.0",
    "mysql-connector-python>=8.0.0",
    "mysqlclient>=2.2.7",
    "openpyxl>=3.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.0",
]
